--- a/pres/04-motivating-interlude.tex
+++ b/pres/04-motivating-interlude.tex
@@ -10,7 +10,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Arrow's Impossibility Theorem}
+    \frametitle{Limitations to Modeling Justice}
     We cannot assume that a ``high tradeoff'' point will be the collective preference because of Arrow's Theorem.
     \pause
     \begin{block}{Arrow's Impossibility Theorem}
