adds more slides to case study

--- a/pres/02-bucket-01.tex
+++ b/pres/02-bucket-01.tex
@@ -196,3 +196,23 @@
     \end{figure}
 \end{frame}
 
+
+\begin{frame}
+    \frametitle{Recap \#1}
+
+    So far we have seen two technical improvements to \gls{osier}
+    % \newline
+
+    \begin{enumerate}
+        \item A new dispatch algorithm and
+        \item an improved \gls{mga} algorithm.
+    \end{enumerate}
+
+    % \newline
+    These methods relate to generating solutions. But how should we evaluate 
+    solutions?
+    
+    % \newline
+    In the next section, I demonstrate \gls{osier} by analyzing nuclear fuel cycle options
+    and introducing a method to select a ``high compromise'' solution.
+\end{frame}
