--- a/pres/04-motivating-interlude.tex
+++ b/pres/04-motivating-interlude.tex
@@ -1,5 +1,3 @@
-\section{Interlude: Motivating the Case Study}
-
 \begin{frame}
     \frametitle{Recap \#2}
     \begin{itemize}
@@ -8,6 +6,8 @@
         ultimate solution be chosen}?
     \end{itemize}
 \end{frame}
+    
+\section{Interlude: Motivating the Case Study}
 
 \begin{frame}
     \frametitle{Limitations to Modeling Justice}
@@ -32,7 +32,7 @@
 \end{frame}
 
 \begin{frame}
-    
+    \frametitle{Addressing the ``Human Dimension''}
     In order for \gls{osier}, or any \gls{esom}, to address the ``human dimension'' of energy systems it must
     \begin{enumerate}[<+->]
         \item enable bespoke and contextualized modeling,
