--- a/pres/05-bucket-02.tex
+++ b/pres/05-bucket-02.tex
@@ -36,6 +36,22 @@
     \end{columns}
 \end{frame}
 
+\begin{frame}
+    \frametitle{Energy Market Deregulation}
+    \begin{block}{History}
+        In 1997, Illinois legislators passed the ``Electric service customer choice and rate relief law''
+        which restructured Illinois utilities (water, gas, electricity) \cite{illinois_90th_general_assembly_electric_1997}.
+    \end{block}
+    \pause
+    \begin{block}{Result}
+        \begin{enumerate}[<+->]
+            \item Investor-owned utilities (Ameren/ComEd) can no longer own generating capacity AND distribution (i.e., wires).
+            \item Illinois legislature can no longer direct utilities to build or retire specific units.
+            \item Consumers have more ``choice'' in electricity procurement.
+            \item Municipally-owned and co-op utilities are exempt from this law.
+        \end{enumerate}
+    \end{block}
+\end{frame}
 
 \begin{frame}
     \frametitle{Energy Procurement in Illinois}
@@ -44,6 +60,46 @@
         \includegraphics[height=0.8\textheight]{../docs/figures/07_interview_chapter/illinois-electric-choice.png}
         \caption{Flow chart describing how customers receive electricity in Illinois.}
         \label{fig:illinois-flow-chart}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
+    \frametitle{General Energy Procurement in Illinois}
+    \begin{figure}
+        \centering
+        \includegraphics[height=0.8\textheight]{images/generic-electric-choice.png}
+        % \caption{Flow chart describing how customers receive electricity in Illinois.}
+        % \label{fig:illinois-flow-chart}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Energy Choice in Champaign/Urbana}
+    \begin{figure}
+        \centering
+        \includegraphics[height=0.8\textheight]{images/chambana-electric-choice.png}
+        % \caption{Flow chart describing how customers receive electricity in Illinois.}
+        % \label{fig:illinois-flow-chart}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Energy Choice in Naperville}
+    \begin{figure}
+        \centering
+        \includegraphics[height=0.8\textheight]{images/naperville-electric-choice.png}
+        % \caption{Flow chart describing how customers receive electricity in Illinois.}
+        % \label{fig:illinois-flow-chart}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Energy Choice at UIUC}
+    \begin{figure}
+        \centering
+        \includegraphics[height=0.8\textheight]{images/uiuc-electric-choice.png}
+        % \caption{Flow chart describing how customers receive electricity in Illinois.}
+        % \label{fig:illinois-flow-chart}
     \end{figure}
 \end{frame}
 
@@ -87,26 +143,43 @@
 \subsection{Results}
 \begin{frame}
     \frametitle{Research Question \#1: How much are \glspl{esom} used?}
-
-    \begin{enumerate}
-        \item At the municipal level: not at all. This is due to structural barriers.
-        \item At the state level: some contracted work for procurement plans.
-    \end{enumerate}
+    \begin{block}{Key Takeaways}    
+        \begin{enumerate}
+            \item At the municipal level: Very little. This is due to structural barriers.
+            \item At the state level: some contracted work for procurement plans.
+        \end{enumerate}
+    \end{block}
+    \begin{block}{Who can benefit from modeling?}
+        \begin{enumerate}
+            \item The state of Illinois (e.g., using modeling to develop energy targets).
+            \item Municipalities which own their own generation and/or distribution (e.g., UIUC).
+            \item Municipalities that are interested in behind-the-meter generation or distributed resources.
+        \end{enumerate}
+    \end{block}
     
 \end{frame}
 
 \begin{frame}
     \frametitle{Research Question \#2: How is justice considered?}
-
-    \begin{itemize}[<+->]
-        \item The state of Illinois discursively considers justice. (E.g., Justice-40, ``equity-eligible'' designation)
-        \item Some municipalities have dedicated justice and equity staff, but it seems siloed from planning.
-    \end{itemize}
-
+    \begin{block}{Key Takeaways}    
+        \begin{itemize}[<+->]
+            \item The state of Illinois discursively considers justice. (E.g., Justice-40, ``equity-eligible'' designation)
+            \item Some municipalities have dedicated justice and equity staff, but it seems siloed from planning.
+            \item There is a large focus on distributive justice.
+        \end{itemize}
+    \end{block}
+    \begin{block}{More to be done}
+        \begin{enumerate}
+            \item Greater process transparency is needed to facilitate procedural justice.
+            \item More opportunities to integrate notions of justice into planning processes.
+        \end{enumerate}
+    \end{block}
 \end{frame}
 
 \begin{frame}
     \frametitle{Research Question \#3: How useful is \gls{osier}? I}
+
+    Despite the lack of municipal modeling, \gls{osier} was well received.
 
     \begin{block}{Select Quotes}
         \setbeamercovered{transparent}
