--- a/pres/03-osier-demonstration.tex
+++ b/pres/03-osier-demonstration.tex
@@ -1,33 +1,34 @@
 \section{\gls{osier} for Nuclear Fuel Cycle Analysis}
 
+\subsection{Framing Questions}
 \begin{frame}
-    \frametitle{Recap \#1}
-
-    So far we have seen two technical improvements to \gls{osier}
-    % \newline
-
-    \begin{enumerate}
-        \item A new dispatch algorithm and
-        \item an improved \gls{mga} algorithm.
-    \end{enumerate}
-
-    % \newline
-    These methods relate to generating solutions. But how should we evaluate 
-    solutions?
-    
-    % \newline
-    In this section, I demonstrate \gls{osier} by analyzing nuclear fuel cycle options
-    and introducing a method to select a ``high compromise'' solution.
+    \begin{block}{Current challenges}
+    \begin{enumerate}[<+->]
+        \item Addressing climate change and data center demand will require a
+        lot of new infrastructure.
+        \item Nuclear infrastructure is needed
+        \cite{julie_kozeracki_pathways_2024}.
+        \item \textbf{How can we determine the ``best'' mix of new
+        infrastructure?}
+        \item \textbf{How can we decide on a fuel cycle to support new
+        reactors?}
+    \end{enumerate}    
+    \end{block}
+    \pause
+    \begin{block}{Current practice}
+        Use energy system optimization models (ESOMs) to identify the mix of
+        resources that minimizes total system cost.
+    \end{block}
 \end{frame}
 
-\subsection{\gls{set} History}
+\subsection{\gls{set} History and Methodology}
 \begin{frame}
     \frametitle{Identifying promising fuel cycles}
     \begin{block}{Which fuel cycle should the U.S. pursue?}
         In 2011, the U.S. \Gls{DOE} commissioned the Nuclear Fuel Cycle
         Evaluation and Screening Study (``the Study'').
     \end{block}
-    % \pause
+    \pause
     \begin{block}{How were recommendations made?}
         % \begin{itemize}
         \begin{itemize}[<+->]
@@ -39,7 +40,6 @@
     \end{block}
 \end{frame}
 
-\subsection{\gls{set} Methodology}
 \begin{frame}
     \frametitle{\gls{set} Methodology}
     \begin{columns}
@@ -70,7 +70,7 @@
     \end{columns}
 \end{frame}
 
-\subsection{Results}
+\subsection{Results and Discussion}
 \begin{frame}
     \frametitle{Analyzing fuel cycles through Pareto optimality}
         
@@ -97,7 +97,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Summary}
+  \frametitle{Differences between \gls{set} and \gls{osier}}
     \begin{table}
         \centering
         \caption{Summary of non-optimal solutions and disagreement. Highlighted
@@ -105,4 +105,38 @@
         \label{tab:non-optimal-subset}
         \resizebox{\columnwidth}{!}{\input{../docs/tables/non-optimal-subset.tex}}
     \end{table}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Sources of disagreement between \gls{osier} and \gls{set}}
+    \begin{columns}
+        \column[t]{3.5cm}
+            \begin{enumerate}
+                \item Data binning is lossy.
+                \item Reliance on expert judgement for metric values and
+                weights.
+            \end{enumerate}
+        \pause        
+        \column[t]{6.5cm}
+          \begin{figure}[htbp!]
+            \begin{center}
+            \resizebox{\columnwidth}{!}{\input{../docs/figures/05_examples_chapter/set_bin_plot.pgf}}
+            % \resizebox{\columnwidth}{!}{\input{./figures/set_bin_plot.pgf}}
+            \end{center}
+                \caption{Binned groups for SNF+HLW activity at 100 years.
+                Reproduced from \cite{wigeland_nuclear_2014}.}
+            \label{fig:set_activity_bin2}
+        \end{figure}
+    \end{columns}
+\end{frame}
+
+\begin{frame}
+  \frametitle{How does this enhance justice?}
+  \begin{enumerate}[<+->]
+    \item The recommendations from the \gls{set} were made based on expert
+    technical input.
+    \item Public stakeholders can express preferences about metrics.
+    \item Including diverse perspectives to analyze tradeoffs enhances
+    procedural and recognition justice.
+  \end{enumerate}  
 \end{frame}
