updates presentation based on feedback -- first pass

--- a/pres/01-introduction.tex
+++ b/pres/01-introduction.tex
@@ -51,135 +51,6 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Distributional}
-    \begin{columns}
-        \column[t]{3cm}
-        \begin{figure}
-            \centering
-            \resizebox{0.7\columnwidth}{!}{
-                \begin{tikzpicture}[nodes={text depth=0.25ex,text height=1.25ex distance=1.7cm}]
-                    \tikzstyle{every node}=[font=\small] \tikzstyle{vertex} =
-                    [circle, draw=black, fill=trueilliniorange]
-                    \tikzstyle{unfocus} = [circle, draw=gray, fill=illiniorange]
-                    \tikzstyle{hidden} = [draw=none] \tikzstyle{edge} = [<->,
-                    very thick]
-                    
-                    \node[vertex](v3) at (0,2)
-                    {\textcolor{black}{\textbf{Distribution}}};
-                    \node[unfocus](v2) at (0,0)
-                    {\textcolor{gray}{\textbf{Procedural}}}; \node[unfocus](v1)
-                    at (0,-2) {\textcolor{gray}{\textbf{Recognition}}};
-        
-            \end{tikzpicture}}
-        \end{figure}
-        \column[t]{7cm}
-        \begin{block}{Distributional Justice}
-            Related to the distribution of burdens and benefits.
-        \end{block}
-        \begin{block}{Normative Question}
-            What is the fairest way to distribute benefits and burdens?
-        \end{block}
-        \begin{block}{Examples of injustice}
-            \begin{itemize}
-                \item Dispossession of land and benefits
-                \cite{yenneti_spatial_2016,sovacool_dispossessed_2021}. 
-                \item Poorer air quality around fossil fuel plants --- primarily
-                located in poorer communities \cite{mohai_which_2015}.
-                \item Solar panel subsidies and installations benefitting
-                wealthier communities \cite{reames_distributional_2020}.
-            \end{itemize}
-        \end{block}
-    \end{columns}
-    
-\end{frame}
-
-\begin{frame}
-    \frametitle{Procedural}
-    \begin{columns}
-        \column[t]{3cm}
-        \begin{figure}
-            \centering
-            \resizebox{0.7\columnwidth}{!}{
-                \begin{tikzpicture}[nodes={text depth=0.25ex,text height=1.25ex distance=1.7cm}]
-                    \tikzstyle{every node}=[font=\small] \tikzstyle{vertex} =
-                    [circle, draw=black, fill=trueilliniorange]
-                    \tikzstyle{unfocus} = [circle, draw=gray, fill=illiniorange]
-                    \tikzstyle{hidden} = [draw=none] \tikzstyle{edge} = [<->,
-                    very thick]
-                    
-                    \node[unfocus](v3) at (0,2)
-                    {\textcolor{gray}{\textbf{Distribution}}}; \node[vertex](v2)
-                    at (0,0) {\textcolor{black}{\textbf{Procedural}}};
-                    \node[unfocus](v1) at (0,-2)
-                    {\textcolor{gray}{\textbf{Recognition}}};
-        
-            \end{tikzpicture}}
-        \end{figure}
-        \column[t]{7cm}
-        \begin{block}{Procedural Justice}
-            Related to decision-making processes --- method and inclusion.
-        \end{block}
-        \begin{block}{Normative Question}
-            What is the fairest way to make decisions affecting specific groups
-            of people?
-        \end{block}
-        \begin{block}{Examples of injustice}
-            \begin{itemize}
-                \item Dismissal of testimony for its lack of technical expertise
-                \cite{johnson_dakota_2021}. 
-                \item Lack of transparency in decision making.
-            \end{itemize}
-        \end{block}
-    \end{columns}
-    
-\end{frame}
-
-\begin{frame}
-    \frametitle{Recognitional}
-    \begin{columns}
-        \column[t]{3cm}
-        \begin{figure}
-            \centering
-            \resizebox{0.7\columnwidth}{!}{
-                \begin{tikzpicture}[nodes={text depth=0.25ex,text height=1.25ex distance=1.7cm}]
-                    \tikzstyle{every node}=[font=\small] \tikzstyle{vertex} =
-                    [circle, draw=black, fill=trueilliniorange]
-                    \tikzstyle{unfocus} = [circle, draw=gray, fill=illiniorange]
-                    \tikzstyle{hidden} = [draw=none] \tikzstyle{edge} = [<->,
-                    very thick]
-                    
-                    \node[unfocus](v3) at (0,2)
-                    {\textcolor{gray}{\textbf{Distribution}}};
-                    \node[unfocus](v2) at (0,0)
-                    {\textcolor{gray}{\textbf{Procedural}}}; \node[vertex](v1)
-                    at (0,-2) {\textcolor{black}{\textbf{Recognition}}};
-        
-            \end{tikzpicture}}
-        \end{figure}
-        \column[t]{7cm}
-        \begin{block}{Recognitional Justice}
-            Related to social value of people or groups derived from
-            relationships, laws, and cultural standing.
-        \end{block}
-        \begin{block}{Normative Question}
-            How much and in what ways should a person or group of people be
-            valued?
-        \end{block}
-        \begin{block}{Examples of injustice}
-            \begin{itemize}
-                \item Energy policies that interfere with loving relationships
-                (e.g., stress from energy
-                insecurity) \cite{van_uffelen_revisiting_2022}.
-                \item Lack of labor protections for
-                workers \cite{van_uffelen_revisiting_2022}.
-                \item Exclusion from a policy process\cite{van_uffelen_revisiting_2022}.
-            \end{itemize}
-        \end{block}
-    \end{columns}
-    
-\end{frame}
-
-\begin{frame}
     \frametitle{Climate change highlights energy system injustices}
     Our changing climate and additional demand drivers from data 
     centers and \gls{ai} require a just transition from fossil 
@@ -362,17 +233,12 @@
 \begin{frame}
     \frametitle{\gls{osier}}
     I developed \gls{osier} to fill these gaps by \cite{dotson_osier_2024}
-    \begin{enumerate}
+    \begin{enumerate}[<+->]
         \item optimizing multi- and many-objective problems,
-        \item allowing user-defined objectives.
+        \item allowing user-defined objectives,
+        \item facilitating multi-criteria decision making,
+        \item being accessible and usable.
     \end{enumerate}
-    
-    \begin{figure}
-        \centering
-        \resizebox{0.95\columnwidth}{!}{\input{../docs/figures/04_benchmark_chapter/4_obj_objective_space_MGA.pgf}}
-        \caption{Objective space for a four-objective problem.}
-        \label{fig:4-obj-space}
-    \end{figure}
 \end{frame}
 
 \begin{frame}
@@ -386,8 +252,35 @@
     \end{figure}
     % [Show the data flow diagram]
 
-    % Osier works by leveraging genetic algorithsm... 
+    % Osier works by leveraging genetic algorithms... 
 \end{frame}
+
+\begin{frame}
+    \frametitle{Evolutionary Algorithms}
+
+    \begin{columns}
+        \column[t]{6cm}
+        \begin{block}{Evolutionary Algorithms for Energy System Optimization}
+            \begin{itemize}
+            \item Inspired by natural selection
+            \item Parallelizable
+            \item Superior to pure linear programming methods for
+                \begin{itemize}
+                    \item independence from problem convexity
+                    \item good sampling/spacing of points along solution set.
+                \end{itemize}
+            \end{itemize}
+            
+            Right: Evolutionary algorithm flow \cite{deb_evolutionary_2014}.
+        \end{block}
+            \column[t]{4cm}
+            \centering
+            \begin{figure}
+            \includegraphics[width=0.75\linewidth]{images/ea-flow.png}  
+            \end{figure}
+        \end{columns}
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Pareto Fronts}
@@ -397,6 +290,17 @@
         \caption{\gls{osier} generates a set of \boldorange{co-optimal solutions} called a \boldorange{Pareto front}.}
     \end{figure}
 \end{frame}
+
+\begin{frame}
+    \frametitle{High-dimensional Pareto fronts}
+    \begin{figure}
+        \centering
+        \resizebox{\columnwidth}{!}{\input{../docs/figures/04_benchmark_chapter/4_obj_objective_space_MGA.pgf}}
+        \caption{Objective space for a four-objective problem.}
+        \label{fig:4-obj-space}
+    \end{figure}
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Goals from Preliminary Exam}
