--- a/pres/06-future-work.tex
+++ b/pres/06-future-work.tex
@@ -9,3 +9,23 @@
         \item Demonstrate \gls{osier} in a participatory modeling process.
     \end{itemize}
 \end{frame}
+
+
+\begin{frame}
+    \frametitle{Summary and Conclusions}
+    Today I showed... 
+    \begin{enumerate}
+        \item Two technical improvements to the \gls{osier} tool
+        \item How \gls{osier} can be used to analyze nuclear fuel cycles.
+        \item That energy planners and decision makers understood the value of \gls{osier}.
+        \item That \gls{osier} can facilitate dialogue necessary to address procedural justice.
+    \end{enumerate}
+\end{frame}
+
+
+\begin{frame}
+
+    % \big
+    Q\&A
+    
+\end{frame}
