--- a/pres/2025-dotson-defense.tex
+++ b/pres/2025-dotson-defense.tex
@@ -105,6 +105,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 %Those icons in the references are terrible looking
 \setbeamertemplate{bibliography item}[text]
 \setbeamertemplate{caption}[numbered]
+% \beamerdefaultoverlayspecification{<+->}
 
 \newcommand{\mathdefault}[1][]{}
 
@@ -173,6 +174,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \input{04-motivating-interlude.tex}
 \input{05-bucket-02.tex}
 \input{06-future-work.tex}
+\input{07-backup-slides.tex}
 
 % \input{acks}
 %%--------------------------------%%
